# rust-test

./: Cargo.toml  LICENSE-MIT  README.md  index.html  package-lock.json  package.json  tailwind.config.js
.github/workflows/: deploy.yml
src/: app.rs
styles/: output.css
